# ml-financial-sentiment-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: refactoring.md
notebooks/: financial_sentiment.ipynb  main.ipynb
notebooks/outputs/: ml_results.csv
notebooks/outputs/models/: adaboost.joblib  decision_tree.joblib  gradient_boosting.joblib  lightgbm.joblib  naive_bayes.joblib  support_vector_machine.joblib  tfidf_vectorizer.joblib  xgboost.joblib
scripts/: run_ml.py  run_transformer.py
src/financial_sentiment/: __init__.py
src/financial_sentiment/config/: __init__.py  settings.py
src/financial_sentiment/data/: __init__.py  exploration.py  loader.py
src/financial_sentiment/evaluation/: __init__.py  plots.py
src/financial_sentiment/features/: __init__.py  vectorizer.py
src/financial_sentiment/models/: __init__.py  ml.py  transformer.py
src/financial_sentiment/pipelines/: __init__.py  ml_pipeline.py  transformer_pipeline.py
src/financial_sentiment/preprocessing/: __init__.py  text_cleaner.py
src/financial_sentiment/utils/: __init__.py  logging.py  nltk_resources.py  seed.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_exploration.py  test_models.py  test_text_cleaner.py
