[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-sentiment"
version = "1.0.0"
description = "Financial market sentiment classification with classical ML and a fine-tuned RoBERTa transformer."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Erick Maia" }]
keywords = ["nlp", "sentiment-analysis", "finance", "transformers", "machine-learning"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "nltk>=3.8",
    "emoji>=2.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
# Classical gradient-boosting models used in the ML baseline.
boosting = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
# Deep-learning stack for the RoBERTa fine-tuning pipeline.
transformers = [
    "torch>=2.1",
    "transformers>=4.38",
    "accelerate>=0.27",
    "datasets>=2.16",
    "evaluate>=0.4",
    "ml-collections>=0.1.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
fin-sentiment-ml = "financial_sentiment.pipelines.ml_pipeline:main"
fin-sentiment-transformer = "financial_sentiment.pipelines.transformer_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
